[gd_scene load_steps=6 format=3 uid="uid://xof7ksjiptuh"]

[ext_resource type="Script" path="res://Scripts/Night1.gd" id="1_03l37"]
[ext_resource type="PackedScene" uid="uid://ds7nfbx15e463" path="res://Scenes/Player.tscn" id="2_d1hy3"]
[ext_resource type="PackedScene" uid="uid://dl54bxxqcb5ji" path="res://Scenes/scene1.tscn" id="2_rmap2"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="4_ojgt5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j1od"]
size = Vector2(76, 538)

[node name="Night1" type="Node2D"]
script = ExtResource("1_03l37")

[node name="TileMap" parent="." instance=ExtResource("2_rmap2")]
position = Vector2(-10, -20)

[node name="Night1_trans" type="Area2D" parent="."]
position = Vector2(617, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Night1_trans"]
position = Vector2(670, 277)
shape = SubResource("RectangleShape2D_6j1od")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Player" parent="." instance=ExtResource("2_d1hy3")]
position = Vector2(189, 138)
scale = Vector2(0.15, 0.15)
script = ExtResource("4_ojgt5")

[node name="Collisions" type="StaticBody2D" parent="."]
position = Vector2(14, 21)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions"]
polygon = PackedVector2Array(-1, -5, 1315, -8, 1314, 539, 18, 535, -12, -7, -61, -68, -93, 650, 1441, 643, 1403, -96, -29, -81, -21, -30, -16, -18)

[connection signal="body_entered" from="Night1_trans" to="." method="_on_night_1_trans_body_entered"]
[connection signal="body_exited" from="Night1_trans" to="." method="_on_night_1_trans_body_exited"]
