[gd_scene load_steps=5 format=3 uid="uid://duqv77k8mplao"]

[ext_resource type="PackedScene" uid="uid://ds7nfbx15e463" path="res://Scenes/Player.tscn" id="1_4so8e"]
[ext_resource type="Script" path="res://Scripts/Night3.gd" id="1_218dw"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="3_mgn6r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6igb0"]
size = Vector2(242, 551)

[node name="Night3" type="Node2D"]
script = ExtResource("1_218dw")

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Player" parent="." instance=ExtResource("1_4so8e")]
position = Vector2(230, 161)
scale = Vector2(0.15, 0.15)
script = ExtResource("3_mgn6r")

[node name="Night3_trans" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Night3_trans"]
position = Vector2(760, 265.5)
shape = SubResource("RectangleShape2D_6igb0")

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 143.0
offset_top = 63.0
offset_right = 562.0
offset_bottom = 160.0
text = "NIGHT 3"

[connection signal="body_entered" from="Night3_trans" to="." method="_on_night_3_trans_body_entered"]
[connection signal="body_exited" from="Night3_trans" to="." method="_on_night_3_trans_body_exited"]
